--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "cloudd",
   "description": "node cloud engine",
   "homepage": "https://github.com/truepattern/cloudd",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "author": "truepattern <admin@truepattern.com>",
   "dependencies": {
     "underscore": ">= 1.2.3",
-    "kue"       : ">= 0.3.3"
+    "kue"       : ">= 0.3.3",
+    "cron"      : ">= 0.1.3"
   },
   "devDependencies": [],
   "keywords": ["cloudd", "job", "scheduler", "workflow", "queue", "task"],
