--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cloudd",
   "description": "node cloud engine",
-  "homepage": "https://github.com/truepattern/cloudd",
-  "version": "0.1.0",
-  "author": "truepattern <admin@truepattern.com>",
+  "homepage": "https://github.com/openmason/cloudd",
+  "version": "0.1.1",
+  "author": "el aras <openmason@gmail.com>",
   "dependencies": {
     "underscore": ">= 1.2.3",
     "winston"   : ">= 0.5.9",
@@ -11,10 +11,13 @@
     "cron"      : ">= 0.1.3"
   },
   "devDependencies": [],
-  "keywords": ["cloudd", "job", "scheduler", "workflow", "queue", "task"],
-  "repository": {"type":"git", "url": "git://github.com/truepattern/cloudd"},
+  "keywords": ["cloudd", "job", "cluster", "scheduler", "workflow", "queue", "task"],
+  "repository": {"type":"git", "url": "git://github.com/openmason/cloudd"},
   "main": "index",
   "bin": { "cloudd": "./bin/cloudd" },
-  "scripts": { "prepublish" : "npm prune" },
-  "engines": { "node":">= 0.5.0 < 0.7.0" }
+  "scripts": { 
+    "prepublish" : "npm prune",
+    "test" : "make test" 
+  },
+  "engines": { "node":">= 0.8.0" }
 }
