--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "kue"       : ">= 0.3.3",
     "cron"      : ">= 0.1.3"
   },
-  "devDependencies": [],
+  "devDependencies": {
+    "mocha"            : ">= 1.6.0",
+    "should"           : ">= 1.2.0"
+  },
   "keywords": ["cloudd", "job", "cluster", "scheduler", "workflow", "queue", "task"],
   "repository": {"type":"git", "url": "git://github.com/openmason/cloudd"},
   "main": "index",
