--- a/package.json
+++ b/package.json
@@ -2,17 +2,18 @@
   "name": "cloudd",
   "description": "node cloud engine",
   "homepage": "https://github.com/openmason/cloudd",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "author": "el aras <openmason@gmail.com>",
   "dependencies": {
-    "underscore": ">= 1.2.3",
-    "winston"   : ">= 0.5.9",
-    "kue"       : ">= 0.3.3",
-    "cron"      : ">= 0.1.3"
+    "underscore": ">= 1.4.3",
+    "winston"   : ">= 0.6.2",
+    "sprintf"   : ">= 0.1.1",
+    "to"        : ">= 0.2.9",
+    "cron"      : ">= 1.0.1"
   },
   "devDependencies": {
-    "mocha"            : ">= 1.6.0",
-    "should"           : ">= 1.2.0"
+    "mocha"     : ">= 1.7.4",
+    "should"    : ">= 1.2.1"
   },
   "keywords": ["cloudd", "job", "cluster", "scheduler", "workflow", "queue", "task"],
   "repository": {"type":"git", "url": "git://github.com/openmason/cloudd"},
