--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "winston"   : ">= 0.6.2",
     "sprintf"   : ">= 0.1.1",
     "to"        : ">= 0.2.9",
-    "cron"      : ">= 1.0.1"
+    "cron"      : ">= 1.0.1",
+    "zmq"       : ">= 2.2.0"
   },
   "devDependencies": {
     "mocha"     : ">= 1.7.4",
