new upgraded code for 0.2 version with command line cloudd ready

--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "underscore": ">= 1.4.3",
     "winston"   : ">= 0.6.2",
     "sprintf"   : ">= 0.1.1",
-    "to"        : ">= 0.2.9",
     "cron"      : ">= 1.0.1",
-    "zmq"       : ">= 2.2.0"
+    "zmq"       : ">= 2.2.0",
+    "to"        : ">= 0.2.9",
+    "handy"     : ">= 0.0.11"
   },
   "devDependencies": {
     "mocha"     : ">= 1.7.4",
